# byte_reader

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yml  test.yml
benches/: prisma.rs
dev/: Cargo.toml
dev/benches/: prisma.rs
dev/examples/: usage.rs
dev/tests/: test.rs
examples/: usage.rs
package/: Cargo.toml  README.md
package/src/: lib.rs
src/: _test.rs  bytes.rs  lib.rs  test.rs  traits.rs
test/: Cargo.toml
test/benches/: prisma.rs
test/examples/: usage.rs
test/tests/: impl.rs  test.rs
