[package]
name          = "byte_reader"
version       = "2.0.0"
edition       = "2021"
authors       = ["kanarus <kanarus786@gmail.com>"]
documentation = "https://docs.rs/byte_reader"
homepage      = "https://crates.io/crates/byte_reader"
repository    = "https://github.com/kana-rus/byte_reader"
readme        = "../README.md"
license       = "MIT"
description   = "A minimal byte-by-byte reader for parsing input"
keywords      = ["minimal", "lightweight", "bytes", "reader", "parser"]
categories    = ["parsing", "encoding", "rust-patterns", "text-processing", "no-std::no-alloc"]

[package.metadata.docs.rs]
all-features  = true

[features]
location      = []
text          = []

### DEBUG ###
#default = ["location", "text"]